--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.html
@@ -13,6 +13,7 @@
     </label>
     <button
       class="game-timer-save-btn"
+      (click)="saveNewGameClock(data.match_data!, GameTimeMinutes.value, GameTimeSeconds.value)"
     >Save New Time
     </button>
     <input
@@ -20,7 +21,10 @@
       id="set-minutes"
       min="0"
       class="game-timer-min-input"
+      [disabled]="data.match_data?.gameclock_status == 'running'"
+      [value]="getMinutes(data.match_data!.gameclock!)"
       [placeholder]="getMinutes(data.match_data!.gameclock!)"
+      #GameTimeMinutes
     >
     <input
       type="number"
@@ -28,35 +32,46 @@
       min="0"
       max="59"
       class="game-timer-sec-input"
+      [disabled]="data.match_data?.gameclock_status == 'running'"
+      [value]="getSeconds(data.match_data?.gameclock!)"
       [placeholder]="getSeconds(data.match_data?.gameclock!)"
+      #GameTimeSeconds
     >
     <button
       class="game-timer-start-btn"
+      (click)="startGameClock()"
     >Start Game Timer
     </button>
     <button
       class="game-timer-pause-btn"
+      (click)="pauseGameClock()"
     >Pause Game Timer
     </button>
     <button
       class="game-timer-reset-btn"
+      (click)="resetGameClock()"
     >Reset Game Timer
     </button>
     <div class="play-timer" id="play-timer">
-          <span class="play-timer-display"
-                id="play-timer-display">{{ getPlayClockSeconds(data.match_data?.playclock!) }}</span>
+          <span
+            class="play-timer-display"
+            id="play-timer-display"
+          >{{ getPlayClockSeconds(data.match_data?.playclock!) }}</span>
     </div>
     <div class="displayed-play-time" id="displayed-play-time"></div>
     <button
       class="play-timer-reset-btn"
+      (click)="resetPlayClock()"
     >Reset Play Timer
     </button>
     <button
       class="play-timer-40-btn"
+      (click)="startPlayClock(40)"
     >Start 40
     </button>
     <button
       class="play-timer-25-btn"
+      (click)="startPlayClock(3)"
     >Start 25
     </button>
   </div>
