--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.less
@@ -1,13 +1,19 @@
-//.main-container {
-//  /*border: 5px solid #000000;*/
-//
-//  display: grid;
-//  grid-template-columns: 1fr;
-//  grid-template-rows: repeat(8, auto);
-//  align-items: start;
-//  justify-items: stretch;
-//  padding: 10px;
-//}
+.main-container {
+  border: 1px solid #000000;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, auto);
+  align-items: start;
+  justify-items: stretch;
+  padding: 10px;
+}
+
+.admin-row-container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 //
 //
 //.teams-container {
@@ -230,69 +236,71 @@
 //}
 
 
-/*FORMS*/
-
-input[type="checkbox"] {
-  margin-right: 5px;
-}
-
-button {
-  min-height: 50px;
-  font-size: 16px;
-  text-align: center;
-
-  border: none;
-  cursor: pointer;
-  background-color: #57636f;
-  color: #fff;
-  border-radius: 5px;
-}
-
-button:hover {
-  background-color: #6c839e; /* Lighter color on hover */
-}
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="tel"],
-textarea {
-  min-height: 50px;
-  border: 1px solid #dbdbdb; /* Bulma default border color */
-  border-radius: 4px;
-  box-shadow: none;
-}
-
-/* Hover effect to make it 5% lighter on hover */
-input[type="text"]:hover,
-input[type="password"]:hover,
-input[type="email"]:hover,
-input[type="tel"]:hover,
-textarea:hover {
-  border-color: #b5b5b5; /* 5% lighter color */
-}
-
-input[type="color"],
-textarea {
-  min-height: 50px;
-  border: 1px solid #dbdbdb; /* Bulma default border color */
-  border-radius: 4px;
-  box-shadow: none;
-  width: 100%;
-}
-
-/* Hover effect to make it 5% lighter on hover */
-input[type="color"]:hover,
-textarea:hover {
-  border-color: #b5b5b5; /* 5% lighter color */
-}
-
-.show-hide-btn {
-  min-height: 25px;
-  font-size: 12px;
-  text-align: center;
-  text-transform: uppercase;
-}
+//
+//
+///*FORMS*/
+//
+//input[type="checkbox"] {
+//  margin-right: 5px;
+//}
+//
+//button {
+//  min-height: 50px;
+//  font-size: 16px;
+//  text-align: center;
+//
+//  border: none;
+//  cursor: pointer;
+//  background-color: #57636f;
+//  color: #fff;
+//  border-radius: 5px;
+//}
+//
+//button:hover {
+//  background-color: #6c839e; /* Lighter color on hover */
+//}
+//
+//input[type="text"],
+//input[type="password"],
+//input[type="email"],
+//input[type="tel"],
+//textarea {
+//  min-height: 50px;
+//  border: 1px solid #dbdbdb; /* Bulma default border color */
+//  border-radius: 4px;
+//  box-shadow: none;
+//}
+//
+///* Hover effect to make it 5% lighter on hover */
+//input[type="text"]:hover,
+//input[type="password"]:hover,
+//input[type="email"]:hover,
+//input[type="tel"]:hover,
+//textarea:hover {
+//  border-color: #b5b5b5; /* 5% lighter color */
+//}
+//
+//input[type="color"],
+//textarea {
+//  min-height: 50px;
+//  border: 1px solid #dbdbdb; /* Bulma default border color */
+//  border-radius: 4px;
+//  box-shadow: none;
+//  width: 100%;
+//}
+//
+///* Hover effect to make it 5% lighter on hover */
+//input[type="color"]:hover,
+//textarea:hover {
+//  border-color: #b5b5b5; /* 5% lighter color */
+//}
+//
+//.show-hide-btn {
+//  min-height: 25px;
+//  font-size: 12px;
+//  text-align: center;
+//  text-transform: uppercase;
+//}
 
 
 @media screen and (max-width: 1330px) {
