--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.html
@@ -1,122 +1,132 @@
 <!--SCORE INPUTS-->
-<div
-  id="score-forms"
-  class="score-forms"
-  *ngIf="scoreInputsVisible$ | async"
->
-  <form
-    class="score-form-a"
-    id="change-score-form-a"
+<div class="admin-row-container">
+  <div
+    id="score-forms"
+    class="score-forms"
+    *ngIf="scoreInputsVisible$ | async"
   >
-    <label
-      class="score-form_team_a_label"
-      for="score_team_a"
-    >Change Team A Score:
-    </label>
-    <input
-      class="score-form_team_a_input"
-      type="text"
-      id="score_team_a"
-      #teamAScoreInput
-      [placeholder]="data.match_data?.score_team_a"
+    <form
+      class="score-form-a"
+      id="change-score-form-a"
     >
-    <button
-      class="score-form_team_a_btn"
-      type="button"
-      (click)="updateScore('a', teamAScoreInput.value)(data.match_data!)"
-    >Save
-    </button>
-  </form>
-  <form
-    class="score-form-b"
-    id="change-score-form-b"
-  >
-    <label
-      class="score-form_team_b_label"
-      for="score_team_b"
-    >Change Team B Score:
-    </label>
-    <input
-      class="score-form_team_b_input"
-      type="text"
-      id="score_team_b"
-      #teamBScoreInput
-      [placeholder]="data.match_data?.score_team_b"
+      <label
+        class="score-form_team_a_label"
+        for="score_team_a"
+      >Change Team A Score:
+      </label>
+      <input
+        class="score-form_team_a_input"
+        type="text"
+        id="score_team_a"
+        #teamAScoreInput
+        [placeholder]="data.match_data?.score_team_a"
+        [disabled]="disabled"
+      >
+      <button
+        appearance="create"
+        tuiButton
+        size="s"
+        type="button"
+        (click)="updateScore('a', teamAScoreInput.value)(data.match_data!)"
+        [disabled]="disabled"
+      >Save
+      </button>
+    </form>
+    <form
+      class="score-form-b"
+      id="change-score-form-b"
     >
-    <button
-      class="score-form_team_b_btn"
-      type="button"
-      (click)="updateScore('b', teamBScoreInput.value)(data.match_data!)"
-    >Save
-    </button>
-  </form>
-</div>
-
-<app-toggle-visible-button
-  [isVisible$]="scoreInputsVisible$"
-  [formName]="'scoreInputs'"
-  [buttonText]="'Score Inputs'">
-</app-toggle-visible-button>
-
-<!--SCORE BTNS-->
-<div *ngIf="scoreButtonsVisible$ | async" id="score-increment-buttons" class="score-increment-buttons">
-  <div class="score-increment-buttons">
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score-+6-a-btn"
-      (click)="adjustScore('a', 6)(data.match_data!)"
-    >+6 SCORE A
-    </button>
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score-+3-a-btn"
-      (click)="adjustScore('a', 3)(data.match_data!)"
-    >+3 SCORE A
-    </button>
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score--1-a-btn"
-      (click)="adjustScore('a', -1)(data.match_data!)"
-    >-1 SCORE A
-    </button>
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score-+1-a-btn"
-      (click)="adjustScore('a', 1)(data.match_data!)"
-    >+1 SCORE A
-    </button>
-  </div>
-  <div class="score-increment-buttons">
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score-+6-b-btn"
-      (click)="adjustScore('b', 6)(data.match_data!)"
-    >+6 SCORE B
-    </button>
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score-+3-b-btn"
-      (click)="adjustScore('b', 3)(data.match_data!)"
-    >+3 SCORE B
-    </button>
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score--1-b-btn"
-      (click)="adjustScore('b', -1)(data.match_data!)"
-    >-1 SCORE B
-    </button>
-    <button
-      [disabled]="isMatchDataSubmitting$ | async"
-      class="score-+1-b-btn"
-      (click)="adjustScore('b', 1)(data.match_data!)"
-    >+1 SCORE B
-    </button>
+      <label
+        class="score-form_team_b_label"
+        for="score_team_b"
+      >Change Team B Score:
+      </label>
+      <input
+        class="score-form_team_b_input"
+        type="text"
+        id="score_team_b"
+        #teamBScoreInput
+        [placeholder]="data.match_data?.score_team_b"
+        [disabled]="disabled"
+      >
+      <button
+        class="score-form_team_b_btn"
+        type="button"
+        (click)="updateScore('b', teamBScoreInput.value)(data.match_data!)"
+        [disabled]="disabled"
+      >Save
+      </button>
+    </form>
   </div>
 </div>
-
-<app-toggle-visible-button
-  [isVisible$]="scoreButtonsVisible$"
-  [formName]="'scoreButtons'"
-  [buttonText]="'Score Buttons'">
-</app-toggle-visible-button>
-
+<div class="admin-row-container">
+  <app-toggle-visible-button
+    [isVisible$]="scoreInputsVisible$"
+    [formName]="'scoreInputs'"
+    [buttonText]="'Score Inputs'">
+  </app-toggle-visible-button>
+</div>
+<div class="admin-row-container">
+  <!--SCORE BTNS-->
+  <div *ngIf="scoreButtonsVisible$ | async" id="score-increment-buttons" class="score-increment-buttons">
+    <div class="score-increment-buttons">
+      <button
+        [disabled]="disabled"
+        class="score-+6-a-btn"
+        (click)="adjustScore('a', 6)(data.match_data!)"
+      >+6 SCORE A
+      </button>
+      <button
+        [disabled]="disabled"
+        class="score-+3-a-btn"
+        (click)="adjustScore('a', 3)(data.match_data!)"
+      >+3 SCORE A
+      </button>
+      <button
+        [disabled]="disabled"
+        class="score--1-a-btn"
+        (click)="adjustScore('a', -1)(data.match_data!)"
+      >-1 SCORE A
+      </button>
+      <button
+        [disabled]="disabled"
+        class="score-+1-a-btn"
+        (click)="adjustScore('a', 1)(data.match_data!)"
+      >+1 SCORE A
+      </button>
+    </div>
+    <div class="score-increment-buttons">
+      <button
+        [disabled]="disabled"
+        class="score-+6-b-btn"
+        (click)="adjustScore('b', 6)(data.match_data!)"
+      >+6 SCORE B
+      </button>
+      <button
+        [disabled]="disabled"
+        class="score-+3-b-btn"
+        (click)="adjustScore('b', 3)(data.match_data!)"
+      >+3 SCORE B
+      </button>
+      <button
+        [disabled]="disabled"
+        class="score--1-b-btn"
+        (click)="adjustScore('b', -1)(data.match_data!)"
+      >-1 SCORE B
+      </button>
+      <button
+        [disabled]="disabled"
+        class="score-+1-b-btn"
+        (click)="adjustScore('b', 1)(data.match_data!)"
+      >+1 SCORE B
+      </button>
+    </div>
+  </div>
+</div>
+<div class="admin-row-container">
+  <app-toggle-visible-button
+    [isVisible$]="scoreButtonsVisible$"
+    [formName]="'scoreButtons'"
+    [buttonText]="'Score Buttons'">
+  </app-toggle-visible-button>
+</div>
