--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
@@ -1,23 +1,16 @@
+.admin-row-container {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 .score-forms {
   border: 1px solid #000000;
 
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto auto;
+  justify-content: stretch;
   padding: 10px;
 }
-
-//.score-form-a,
-//.score-form-b {
-//  border: 1px solid #000000;
-//
-//  display: grid;
-//  grid-template-columns: auto auto;
-//  grid-template-rows: auto auto;
-//  padding: 10px;
-//  grid-gap: 10px;
-//
-//  align-content: center;
-//  justify-content: stretch;
 
 .score-form-a,
 .score-form-b {
