refactoring admin forms, score and addsign pipe

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -3,7 +3,7 @@
     <!--SHOW/HIDE ALL-->
 
     <button
-      appearance="outline"
+      appearance="icon"
       tuiButton
       size="l"
       type="button"
