--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.less
@@ -3,7 +3,7 @@
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(8, auto);
+  //grid-template-rows: repeat(8, auto);
   align-items: start;
   justify-items: stretch;
   padding: 10px;
