--- a/src/app/shared/ui/buttons/toggle-visible-button/toggle-visible-button.component.html
+++ b/src/app/shared/ui/buttons/toggle-visible-button/toggle-visible-button.component.html
@@ -1,7 +1,7 @@
 <button
-  appearance="outline"
+  appearance="icon"
   tuiButton
-  size="l"
+  size="m"
   type="button"
   (click)="toggleItemVisibility(formName)"
   [icon]="(isVisible$ | async) ? 'tuiIconEyeOff' : 'tuiIconEye'"
