refactoring admin forms, qtr form

--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -26,6 +26,7 @@
   <app-qtr-forms
     [data]="data"
     [qtrFormsVisible$]="qtrFormVisible$"
+    [disabled]="(isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!"
   ></app-qtr-forms>
 
   <app-down-distance-forms
