--- a/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/qtr-forms/qtr-forms.component.less
@@ -1,19 +1,26 @@
-.quarter-selector-sel {
-  grid-row: span 2;
-  font-size: 25px; /* Adjust the font size as needed */
-  text-align: center; /* Adjust the text alignment as needed */
-  width: 100%;
+.quarter {
+  box-shadow: 0px 0px 10px 0px #232323;
+  border-radius: 5px;
+
+  display: grid;
+  //grid-template-rows: auto auto;
+  //grid-template-columns: auto;
+  //grid-gap: 10px;
+  //justify-content: stretch;
+  //padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .quarter-selector {
-  border: 1px solid #000000;
+  //border: 1px solid #000000;
 
   display: grid;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto;
   grid-template-columns: auto;
   padding: 10px;
   grid-gap: 10px;
 
   align-content: center;
-  justify-content: center;
+  justify-content: stretch;
 }
