--- a/src/app/shared/ui/buttons/admin-submit-button/admin-submit-button.component.html
+++ b/src/app/shared/ui/buttons/admin-submit-button/admin-submit-button.component.html
@@ -4,7 +4,6 @@
   size="s"
   type="button"
   style="width: 100%"
-  (click)="adjustScore(team, score, data.match_data!)"
   [disabled]="disabled"
->{{ score | addSign }} {{ team | teamName }} Team
+>Save
 </button>
