--- a/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/score-forms/score-forms.component.less
@@ -46,8 +46,8 @@
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
-  padding: 10px;
-  grid-gap: 10px;
+  //padding: 10px;
+  //grid-gap: 10px;
 }
 
 
