refactoring admin forms and breads local storage

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div class="super main_container">
+<div class="super_main_container">
   <tui-root>
     <app-header [title]="title"></app-header>
     <div style="margin: 0; padding-left: 15px;">
