--- a/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
+++ b/src/app/shared/scoreboards/admin-forms/all-admin-forms/all-admin-forms.component.html
@@ -32,6 +32,7 @@
   <app-down-distance-forms
     [data]="data"
     [downAndDistanceFormVisible$]="downAndDistanceFormVisible$"
+    [disabled]="(isMatchDataLoading$ | async)! || (isMatchDataSubmitting$ | async)!"
   ></app-down-distance-forms>
 
   <app-timeout-forms
